# chesser

./: .gitignore  CMakeLists.txt  chess.c  chess.h  font_chess.c  font_chess.h  list.c  list.h  main.c  player.c  player.h  sdltest.c  surface.c  testbuild  types.h
.cache/clangd/index/: chess.c.A344C34C6AFE6CD1.idx  chess.h.34E9EB049CBB9FC8.idx  font.c.44A679597B5C3366.idx  font.h.98E8CD8DC8AC10C3.idx  font_5x5.c.0D3DD6C0A977B215.idx  font_7x7.c.91CFCE2A08BF234B.idx  font_chess.c.FFE423DB5F111B69.idx  font_chess.h.990D24F2F0D8BA44.idx  list.c.3EFDE26FC1DBBF76.idx  list.h.0574364529422D8D.idx  main.c.46D9AC775F32EBAD.idx  surface.c.E252569742D85FC3.idx  surface.h.F057F5D085756E1C.idx  types.h.D2CE2CBB1B0D39B8.idx
